edited html and css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
     
     <title>Student Bio: Kingsley Ramos</title>
-
     <Body>
         <section>
         <header>
@@ -27,4 +26,7 @@
         </ul>
       </section>
     </Body>
+
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+
 </html>
