--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
     
+    <head>
+        <link rel="stylesheet" type="text/css" href="css\styles.css" />
+        <meta charset="UTF-8">
+        <title>Activity 1: Basic HTML Bio</title>
+    </head>
+
     <title>Student Bio: Kingsley Ramos</title>
     <Body>
-        <section>
         <header>
-             <h1>Student Bio</h1>
-            <h2>Kingsley Ramos</h2>
+            <h1>Student Bio</h1>
         </header>
-        </section>
 
+        <div class="container">
+            <h2>Kingsley Ramos</h2>
 
-        <section>
-        <img src="https://placehold.it/200x200" alt="Place Holder Image"/>
+            <section id="bio-image">
+                <img src="https://placehold.it/200x200" alt="Place Holder Image"/>
+            </section>
+            
+            <section id="main-bio">
+            <p>I love California Burritos.</p>
+           </section>
 
-        <p>I love California Burritos.</p>
-        <section>
+            <section id="contact-info">
+                <h3>Contact Info</h3>
+                <ul>
+                    <li><strong>Email:</strong> kingsleyramos@gmail.com</li>
+                    <li><strong>GitHub:</strong> <a href="https://github.com/kingsleyramos/"> https://github.com/kingsleyramos/</a></li>
+                    <li><strong>Portfolio:</strong> Coming Soon</li>
+                </ul>
+            </section>
 
-        <section>
-        <h3>Contact Info</h3>
-        <ul>
-            <li><strong>Email:</strong> kingsleyramos@gmail.com</li>
-            <li><strong>GitHub:</strong> <a href="https://github.com/kingsleyramos/"> https://github.com/kingsleyramos/</a></li>
-            <li><strong>Portfolio:</strong> Coming Soon</li>
-        </ul>
-      </section>
+        </div>
     </Body>
-
-    <link rel="stylesheet" type="text/css" href="styles.css" />
 
 </html>
